Fixes Issue #1149. Vertical nav overflow. (#1151)

--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -81,14 +81,15 @@
     [class^="container"] {
       flex-direction: column;
       align-items: stretch;
+      padding: 0;
     }
 
     .navbar-nav {
-      margin-left: calc( -1 * var(--#{$prefix}gutter-x, #{$container-padding-x}));
-      margin-right: calc( -1 * var(--#{$prefix}gutter-x, #{$container-padding-x}));
+      margin-left: 0;
+      margin-right: 0;
 
       .nav-link {
-        padding: .5rem $container-padding-x;
+        padding: .5rem calc($container-padding-x / 2);
         justify-content: flex-start;
       }
     }
@@ -111,16 +112,16 @@
         min-width: 0;
         display: flex;
         width: auto;
-        padding-left: add($container-padding-x, 1.75rem);
+        padding-left: add(calc($container-padding-x / 2), 1.75rem);
         color: inherit;
       }
 
       .dropdown-menu .dropdown-item {
-        padding-left: add($container-padding-x, 3.25rem);
+        padding-left: add(calc($container-padding-x / 2), 3.25rem);
       }
 
       .dropdown-menu .dropdown-menu .dropdown-item {
-        padding-left: add($container-padding-x, 4.75rem);
+        padding-left: add(calc($container-padding-x / 2), 4.75rem);
       }
     }
 
@@ -424,6 +425,7 @@ Navbar vertical
               align-items: stretch;
               min-height: 100%;
               justify-content: flex-start;
+              padding: 0;
             }
 
             ~ .page {
